# newborn-health-tracking

./: .gitignore  README.md
backend/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/endpoints/: auth.py  children.py  health.py
backend/app/core/: config.py  security.py  vaccine_schedule.py
backend/app/db/: session.py
backend/app/models/: all_models.py  base.py
backend/app/schemas/: child.py  child_member.py  health.py  user.py
backend/app/services/: child_access.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 5b4e111d5f2d_add_child_members.py  699640698467_initial_schema.py  7d2af9b6a9d5_add_administered_date_and_is_recommended.py
frontend/: README.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/components/: GrowthChart.tsx
frontend/components/dashboard/: add-child-dialog.tsx  add-growth-log-dialog.tsx  add-medication-log-dialog.tsx  add-vaccine-record-dialog.tsx  care-team-panel.tsx
frontend/components/providers/: app-providers.tsx  auth-provider.tsx  query-provider.tsx
frontend/components/ui/: avatar.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  form.tsx  input.tsx  sonner.tsx  table.tsx  tabs.tsx
frontend/lib/: api.ts  constants.ts  types.ts  utils.ts
